<resources>
    <string name="app_name">HabitTrainer</string>
    <string name="drinkWater">Drink Water</string>
    <string name="iconWater">Icon: Water</string>
    <string name="stayHydrated">Stay hydrated!</string>
    <string name="habit_begin">Begin habit...</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="choose_image">Choose Image</string>
    <string name="selected_image">Selected Image</string>
    <string name="save">Save</string>
</resources>