<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".CreateHabitActivity"
            android:orientation="vertical"
            android:padding="8dp"
        >

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/title"
                    android:autofillHints="@string/title"
                    android:lines="3"
                />

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:hint="@string/description"
                    android:autofillHints="@string/description" />

                <Button
                    android:id="@+id/habit_add_image"
                    android:hint="@string/choose_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_on_primary"
                    android:onClick="handleClickChooseImage"
                />

                <ImageView
                    android:id="@+id/add_image_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/selected_image"
                    android:padding="10dp"
                />

                <Button
                    android:id="@+id/habit_add_save"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/save"
                    android:onClick="handleClickSave"
                />

                <TextView
                    android:id="@+id/habit_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#e53935"
                />
        </LinearLayout>
</ScrollView>